--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 nav {
     position: fixed;
-    padding: 1rem 2rem;
+    padding: 1rem 4rem;
     width: 100%;
     transition: background-color .2s;
     z-index: 99;
@@ -32,11 +32,9 @@ nav #theme-btn:hover, nav #theme-btn:focus {
 nav ul {
     display: none;
     position: absolute;
-    top: 5rem;
     right: 0;
     padding: 0;
     width: 100%;
-    min-width: 15rem;
 }
 nav ul li {
     display: block;
