--- a/css/screen.css
+++ b/css/screen.css
@@ -13,9 +13,6 @@
         font-size: 14px;
     }
 
-    nav {
-        padding: 1rem 4rem;
-    }
     nav label {
         display: none;
     }
@@ -39,7 +36,7 @@
     }
 
     #hero h1 {
-        width: 40rem;
+        width: 38rem;
     }
 
     .card-group {
